# testParallelDirectives

./: CMakeLists.txt  README.org
computation-tests/: README.org
computation-tests/matrix_sum/: CMakeLists.txt  ompTarget.F90
computation-tests/misc/: Makefile  cray.txt  forall_doconcurrent_comparison.f90  gnu.txt  intel.txt  pgi.txt
computation-tests/openacc/: README.org
computation-tests/openmp/: CMakeLists.txt
computation-tests/openmp/matrix_sum/: CMakeLists.txt  arraySyntax.F90  do.F90  doConcurrent1.F90  doConcurrent2.F90  matsum.F90  ompParallelDo.F90  ompParallelLoop.F90  ompTarget.F90  ompTargetDataless.F90  ompWorkshare.F90
computation-tests/openmp/misc/: matvec_doloop1.F90
computation-tests/openmp/saxpy/: CMakeLists.txt  saxpy.F90
data/: Makefile  column_vs_row.txt  cray-9.1.1-compile-test.txt  cray-all-data.txt  cray-general-opt.txt  cray-gpu.txt  pgf90-19.9-0-compile-test.txt  plot.py  tmp-cray-new-func.txt  tmp-cray.txt
data/compile-test/: compile-test-summerized.txt  gnu-8.3.0-compile-test.txt  ifort-19.0.5-compile-test.txt
data/official/: README.org  newRuns.txt  output.txt
data/random/: cray-general-no-opt.txt
directive-tests/openmp/: Makefile  do5.f90  parallel2.f90  parallel3.f90  parallelDo2.f90  parallelLoop1.f90  parallelSections1.f90  parallelWorkshare1.f90  targetParallelLoop1.f90  teams.f90
examples/openacc/: multiThreadMultiDevice.F90
tests/: CMakeLists.txt  Makefile  do1.f90  do10.f90  do6.f90  do8.f90  do9.f90  parallel1.f90  parallelDo3.f90  parallelDoSIMD1.f90  parallelMasterTaskloop1.f90  targetParallelDo1.f90  targetTeamsDistribute1.f90
tests/openacc/: CMakeLists.txt
tests/openmp/: CMakeLists.txt  do2.f90  do7.f90  loop1.f90  parallel2.f90  parallel4.f90  parallelDo4.f90  parallelSingleDepend1.f90  targetTeamsDistributeSIMD1.f90
tests/openmp_math/: matvec_doloop2.F90
tests/openmp_math/jacobi/: CMakeLists.txt  doloop.F90
tests/openmp_math/matrix_sum/: CMakeLists.txt  doconcurrent2.F90  doloop.F90  omp.F90  ompParallelLoop.F90  omp_target_dataless.F90
tools/: CMakeLists.txt  benchmark_tools.F90  benchmark_tools.f90  gen_testing_functions.cmake  testing_functions.cmake
