add_subdirectory(matrix_sum)

# from Performance Evaluation of OpenMP's Target Construct on GPUs
# - Hayashi and Shirako
# add_subdirectory(vecAdd)
# add_subdirectory(saxpy)
# add_subdirectory(MM)
# add_subdirectory(BS)
# add_subdirectory(OMRIQ)
# add_subdirectory(SP)



# from EE663, slide 127
# add_subdirectory(jacobi)
# add_subdirectory(ep)
# add_subdirectory(spmul)
# add_subdirectory(cg)
# add_subdirectory(ft)

# from EE663, slide 128
# add_subdirectory(backprop)
# add_subdirectory(bfs)
# add_subdirectory(cfd)
# add_subdirectory(hotspot)
# add_subdirectory(lud)
# add_subdirectory(nw)
# add_subdirectory(spmul)
# add_subdirectory(srad)
