add_subdirectory(matrix_sum)
add_subdirectory(saxpy)

# from Performance Evaluation of OpenMP's Target Construct on GPUs
# - Hayashi and Shirako
# add_subdirectory(vecAdd)
# add_subdirectory(saxpy) # single-precision scalar multiply and vector add
# add_subdirectory(MM) # Matrix Multiplication
# add_subdirectory(BS) # Black Scholes
# following two are from SPEC 2015
# add_subdirectory(OMRIQ) # 3-D MRI reconstruction from SPEC ACCEL
# add_subdirectory(SP) # Scalar Penta-diagonal solver from SPEC ACCEL



# from EE663, slide 127
# add_subdirectory(jacobi)
# add_subdirectory(ep)
# add_subdirectory(spmul)
# add_subdirectory(cg)
# add_subdirectory(ft)

# from EE663, slide 128
# add_subdirectory(backprop)
# add_subdirectory(bfs)
# add_subdirectory(cfd)
# add_subdirectory(hotspot)
# add_subdirectory(lud)
# add_subdirectory(nw)
# add_subdirectory(spmul)
# add_subdirectory(srad)
